2010-11-19  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix quoting in setparams in handling menuentry command.

	* grub-core/commands/menuentry.c (setparams_prefix): Use single
	quotes for arguments.

2010-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_entry.c (print_up): Fix displacement of up
	arrow.
	Reported by: Jordan Uggla.

2010-11-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Make better UTF compliant.

	* grub-core/normal/charset.c (grub_utf8_to_utf16): Handle 6- and 7-byte
	sequences as incorrect.
	(grub_is_valid_utf8): Likewise.
	(grub_utf8_to_ucs4): Likewise.
	(grub_ucs4_to_utf8): Handle codepoints outside of BMP.
	(grub_ucs4_to_utf8_alloc): Likewise.
	* include/grub/charset.h (grub_utf16_to_utf8): Likewise.

2010-11-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Make legacy_source behave like source.

	* grub-core/commands/legacycfg.c (legacy_file): Don't call
	grub_show_menu.
	(grub_cmd_legacy_source): Call grub_show_menu if needed.

2010-11-16  Colin Watson  <cjwatson@debian.org>

	* conf/Makefile.common (CFLAGS_GNULIB): Add -Wno-unused-parameter.
	(-Wunused implies -Wunused-parameter, but not vice versa).

2010-11-16  Colin Watson  <cjwatson@ubuntu.com>

	* configure.ac: Make error messages less confusing by testing for
	-Wtrampolines rather than -Wno-trampolines (since -Wno-* is always
	accepted, but produces a diagnostic if something else is wrong).

2010-11-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c (grub_keyboard_controller_read)
	[GRUB_MACHINE_MIPS_YEELOONG || GRUB_MACHINE_QEMU]: ifdef-ed out
	(now unused).
	(grub_keyboard_controller_init)
	[GRUB_MACHINE_MIPS_YEELOONG || GRUB_MACHINE_QEMU]: Don't attempt to
	read the initial state since controller isn't inited yet.

2010-11-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (malloc_in_range): Take into account that
	allocate_regbeg may need to create new chunk header.
